[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "customcppforces"
description = "Platform-agnostic forces for OpenMM"
dynamic = ["version"]
readme = "README.md"
authors = [
    { name = "Charlles Abreu", email = "craabreu@gmail.com" }
]
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8"
dependencies = [
    "openmm >= 8.1"
]

[project.optional-dependencies]
test = []

[tool.setuptools]
zip-safe = false
include-package-data = false

[tool.setuptools.packages.find]
namespaces = false
where = ["."]

[tool.setuptools.package-data]
customcppforces = [
    "py.typed"
]
