[build-system]
requires = ["setuptools", "numpy >= 1.19"]
build-backend = "setuptools.build_meta"

[project]
name = "openmmcppforces"
description = "Platform-agnostic OpenMM Forces"
version = "@PROJECT_VERSION@"
readme = "README.md"
authors = [
    { name = "Charlles Abreu", email = "RedesignScience@gmail.com" }
]
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8"
dependencies = [
    "openmm >= 8.1"
]

[project.optional-dependencies]
test = []

[tool.setuptools]
zip-safe = false
include-package-data = false

[tool.setuptools.packages.find]
namespaces = false
where = ["."]

[tool.setuptools.package-data]
openmmcppforces = []

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-v -ra --doctest-modules"
testpaths = ["openmmcppforces"]
